hphp/test/quick/parse_fail_shapes3.php.expectf

Fatal error: Shape field name must be a nonempty single-quoted string or a class constant in %s/parse_fail_shapes3.php on line 5
